--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
     "tailwindcss": "^3.3.5",
     "vue": "^3.3.8",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "axios": "^1.11.0",
+    "photoswipe": "^5.4.4",
+    "swiper": "^11.2.10"
   }
 }
